// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatOptions > Standard Rendering (snapshot) 1`] = `
<div>
  <div
    class="msg container fixedScrollbar chatOptionsPanel"
    style="flex-direction: column;"
  >
    <div
      class="msg container fixedScrollbar header"
      style="flex-direction: column; justify-content: flex-start; align-items: center;"
    >
      <div
        class="msg container fixedScrollbar title"
        style="flex-direction: row; justify-content: stretch; align-items: center;"
      >
        <div
          class="msg icon"
          style="mask-image: url("/src/assets/images/chatOptions.svg");"
        />
        <label
          class="msg label"
          data-tooltip="expand"
        >
          HeatWave Chat
        </label>
      </div>
      <label
        class="msg label"
        data-tooltip="expand"
      >
        AI Profile Editor
      </label>
    </div>
    <div
      class="msg container fixedScrollbar accordion"
      style="flex-direction: column; justify-content: flex-start;"
    >
      <div
        class="msg container fixedScrollbar actions"
        style="flex-direction: row; justify-content: flex-end; align-items: center;"
      />
      <div
        class="msg splitContainer accordionContent resizing"
      >
        <div
          class="sashContainer"
        >
          <div
            class="msg divider horizontal sash disabled"
            id="schemaSectionSash"
            style="--thickness: 4px; top: 41px;"
          />
          <div
            class="msg divider horizontal sash disabled"
            id="historySectionSash"
            style="--thickness: 4px; top: 166px;"
          />
          <div
            class="msg divider horizontal sash disabled"
            id="tablesSectionSash"
            style="--thickness: 4px; top: 272px;"
          />
          <div
            class="msg divider horizontal sash disabled"
            id="docsSectionSash"
            style="--thickness: 4px; top: 392px;"
          />
          <div
            class="msg divider horizontal sash disabled"
            id="modelSectionSash"
            style="--thickness: 4px; top: 468px;"
          />
          <div
            class="msg divider horizontal sash disabled"
            id="advancedModelSectionSash"
            style="--thickness: 4px; top: 484px;"
          />
          <div
            class="msg divider horizontal sash disabled"
            id="promptSectionSash"
            style="--thickness: 4px; top: 500px;"
          />
        </div>
        <div
          class="splitContentContainer"
        >
          <div
            class="msg container fixedScrollbar splitHost"
            id="schemaSectionHost"
            style="flex-direction: column; justify-content: stretch; height: 44px; top: 0px;"
          >
            <div
              class="msg container fixedScrollbar section expanded"
              id="schemaSection"
              style="flex-direction: column; align-items: stretch;"
            >
              <div
                class="msg container fixedScrollbar title"
                style="flex-direction: row; align-items: center;"
                tabindex="0"
              >
                <div
                  class="msg icon codicon codicon-chevron-down"
                />
                <label
                  class="msg label"
                  data-tooltip="expand"
                >
                  Schema Scope
                </label>
                <div
                  class="msg container fixedScrollbar actions"
                  style="flex-direction: row; justify-content: flex-end; align-items: center;"
                />
              </div>
              <div
                class="msg container fixedScrollbar content"
                style="flex-direction: column;"
                tabindex="0"
              >
                <div
                  class="msg container fixedScrollbar scopeMultiItemRow"
                  style="flex-direction: row;"
                >
                  <div
                    class="msg container fixedScrollbar dropdown scopeSchema"
                    data-tooltip="inherit"
                    style="flex-direction: row; align-items: center;"
                    tabindex="0"
                  >
                    <label
                      class="msg label ellipsis"
                      data-tooltip="expand"
                    >
                      All Database Schemas
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="msg container fixedScrollbar splitHost"
            id="historySectionHost"
            style="flex-direction: column; justify-content: stretch; height: 125px; top: 44px;"
          >
            <div
              class="msg container fixedScrollbar section expanded"
              id="historySection"
              style="flex-direction: column; align-items: stretch;"
            >
              <div
                class="msg container fixedScrollbar title"
                style="flex-direction: row; align-items: center;"
                tabindex="0"
              >
                <div
                  class="msg icon codicon codicon-chevron-down"
                />
                <label
                  class="msg label"
                  data-tooltip="expand"
                >
                  History
                </label>
                <div
                  class="msg container fixedScrollbar actions"
                  style="flex-direction: row; justify-content: flex-end; align-items: center;"
                />
              </div>
              <div
                class="msg container fixedScrollbar content"
                style="flex-direction: column;"
                tabindex="0"
              >
                <div
                  class="msg container fixedScrollbar scopeMultiItemRow"
                  style="flex-direction: row;"
                >
                  <div
                    class="msg treeGrid"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="msg container fixedScrollbar splitHost"
            id="tablesSectionHost"
            style="flex-direction: column; justify-content: stretch; height: 106px; top: 169px;"
          >
            <div
              class="msg container fixedScrollbar section expanded"
              id="tablesSection"
              style="flex-direction: column; align-items: stretch;"
            >
              <div
                class="msg container fixedScrollbar title"
                style="flex-direction: row; align-items: center;"
                tabindex="0"
              >
                <div
                  class="msg icon codicon codicon-chevron-down"
                />
                <label
                  class="msg label"
                  data-tooltip="expand"
                >
                  Database Tables
                </label>
                <div
                  class="msg container fixedScrollbar actions"
                  style="flex-direction: row; justify-content: flex-end; align-items: center;"
                />
              </div>
              <div
                class="msg container fixedScrollbar content"
                style="flex-direction: column;"
                tabindex="0"
              >
                <div
                  class="msg container fixedScrollbar scopeMultiItemRow"
                  style="flex-direction: column;"
                >
                  <div
                    class="msg container fixedScrollbar tagInput scopeTables"
                    style="flex-direction: row; flex-wrap: wrap;"
                  />
                  <input
                    class="msg toggle round"
                    id="lockTableListToggle"
                    readonly=""
                    type="checkbox"
                  />
                  <label
                    class="msg toggle round"
                    for="lockTableListToggle"
                    tabindex="0"
                  >
                    Lock table list
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="msg container fixedScrollbar splitHost"
            id="docsSectionHost"
            style="flex-direction: column; justify-content: stretch; height: 120px; top: 275px;"
          >
            <div
              class="msg container fixedScrollbar section expanded"
              id="docsSection"
              style="flex-direction: column; align-items: stretch;"
            >
              <div
                class="msg container fixedScrollbar title"
                style="flex-direction: row; align-items: center;"
                tabindex="0"
              >
                <div
                  class="msg icon codicon codicon-chevron-down"
                />
                <label
                  class="msg label"
                  data-tooltip="expand"
                >
                  Matched Documents
                </label>
                <div
                  class="msg container fixedScrollbar actions"
                  style="flex-direction: row; justify-content: flex-end; align-items: center;"
                />
              </div>
              <div
                class="msg container fixedScrollbar content"
                style="flex-direction: column;"
                tabindex="0"
              >
                <div
                  class="msg container fixedScrollbar scopeMultiItemRow"
                  style="flex-direction: row;"
                >
                  <div
                    class="msg treeGrid"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="msg container fixedScrollbar splitHost"
            id="modelSectionHost"
            style="flex-direction: column; justify-content: stretch; height: 76px; top: 395px;"
          >
            <div
              class="msg container fixedScrollbar section expanded"
              id="modelSection"
              style="flex-direction: column; align-items: stretch;"
            >
              <div
                class="msg container fixedScrollbar title"
                style="flex-direction: row; align-items: center;"
                tabindex="0"
              >
                <div
                  class="msg icon codicon codicon-chevron-down"
                />
                <label
                  class="msg label"
                  data-tooltip="expand"
                >
                  Model Options
                </label>
                <div
                  class="msg container fixedScrollbar actions"
                  style="flex-direction: row; justify-content: flex-end; align-items: center;"
                />
              </div>
              <div
                class="msg container fixedScrollbar content"
                style="flex-direction: column;"
                tabindex="0"
              >
                <div
                  class="msg container fixedScrollbar scopeMultiItemColumn"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch;"
                >
                  <div
                    class="msg container fixedScrollbar scopeLabeledItem"
                    style="flex-direction: row;"
                  >
                    <label
                      class="msg label scopeLabel"
                      data-tooltip="expand"
                    >
                      Model:
                    </label>
                    <div
                      class="msg container fixedScrollbar dropdown scopeModel"
                      data-tooltip="inherit"
                      style="flex-direction: row; align-items: center;"
                      tabindex="0"
                    >
                      <label
                        class="msg label ellipsis"
                        data-tooltip="expand"
                      >
                        Default
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="msg container fixedScrollbar splitHost"
            id="advancedModelSectionHost"
            style="flex-direction: column; justify-content: stretch; height: 16px; top: 471px;"
          >
            <div
              class="msg container fixedScrollbar section"
              id="advancedModelSection"
              style="flex-direction: column; align-items: stretch;"
            >
              <div
                class="msg container fixedScrollbar title"
                style="flex-direction: row; align-items: center;"
                tabindex="0"
              >
                <div
                  class="msg icon codicon codicon-chevron-right"
                />
                <label
                  class="msg label"
                  data-tooltip="expand"
                >
                  Advanced Model Options
                </label>
                <div
                  class="msg container fixedScrollbar actions"
                  style="flex-direction: row; justify-content: flex-end; align-items: center;"
                />
              </div>
              <div
                class="msg container fixedScrollbar content"
                style="flex-direction: column;"
                tabindex="0"
              >
                <div
                  class="msg container fixedScrollbar scopeMultiItemColumn"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch;"
                >
                  <div
                    class="msg container fixedScrollbar scopeLabeledItem"
                    style="flex-direction: row;"
                  >
                    <label
                      class="msg label scopeLabel"
                      data-tooltip="expand"
                    >
                      Temperature:
                    </label>
                    <input
                      class="msg input"
                      id="temperature"
                      spellcheck="true"
                      type="text"
                    />
                    <label
                      class="msg label infoLbl"
                      data-tooltip="expand"
                    >
                      (0.0 - 5.0)
                    </label>
                  </div>
                  <div
                    class="msg container fixedScrollbar scopeLabeledItem"
                    style="flex-direction: row;"
                  >
                    <label
                      class="msg label scopeLabel"
                      data-tooltip="expand"
                    >
                      Max Tokens:
                    </label>
                    <input
                      class="msg input"
                      id="maxTokens"
                      spellcheck="true"
                      type="text"
                    />
                    <label
                      class="msg label infoLbl"
                      data-tooltip="expand"
                    >
                      (1 - 4096)
                    </label>
                  </div>
                  <div
                    class="msg container fixedScrollbar scopeLabeledItem"
                    style="flex-direction: row;"
                  >
                    <label
                      class="msg label scopeLabel"
                      data-tooltip="expand"
                    >
                      Top k:
                    </label>
                    <input
                      class="msg input"
                      id="topK"
                      spellcheck="true"
                      type="text"
                    />
                    <label
                      class="msg label infoLbl"
                      data-tooltip="expand"
                    >
                      (0 - 500)
                    </label>
                  </div>
                  <div
                    class="msg container fixedScrollbar scopeLabeledItem"
                    style="flex-direction: row;"
                  >
                    <label
                      class="msg label scopeLabel"
                      data-tooltip="expand"
                    >
                      Top p:
                    </label>
                    <input
                      class="msg input"
                      id="topP"
                      spellcheck="true"
                      type="text"
                    />
                    <label
                      class="msg label infoLbl"
                      data-tooltip="expand"
                    >
                      (0.0 - 1.0)
                    </label>
                  </div>
                  <div
                    class="msg container fixedScrollbar scopeLabeledItem"
                    style="flex-direction: row;"
                  >
                    <label
                      class="msg label scopeLabel"
                      data-tooltip="expand"
                    >
                      Repeat Penalty:
                    </label>
                    <input
                      class="msg input"
                      id="repeatPenalty"
                      spellcheck="true"
                      type="text"
                    />
                    <label
                      class="msg label infoLbl"
                      data-tooltip="expand"
                    >
                      (0.0 - 1.0)
                    </label>
                  </div>
                  <div
                    class="msg container fixedScrollbar scopeLabeledItem"
                    style="flex-direction: row;"
                  >
                    <label
                      class="msg label scopeLabel"
                      data-tooltip="expand"
                    >
                      Stop Sequences:
                    </label>
                    <textarea
                      class="msg input"
                      id="stopSequences"
                      rows="2"
                      spellcheck="true"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="msg container fixedScrollbar splitHost"
            id="promptSectionHost"
            style="flex-direction: column; justify-content: stretch; height: 16px; top: 487px;"
          >
            <div
              class="msg container fixedScrollbar section"
              id="promptSection"
              style="flex-direction: column; align-items: stretch;"
            >
              <div
                class="msg container fixedScrollbar title"
                style="flex-direction: row; align-items: center;"
                tabindex="0"
              >
                <div
                  class="msg icon codicon codicon-chevron-right"
                />
                <label
                  class="msg label"
                  data-tooltip="expand"
                >
                  Review Generated Prompt
                </label>
                <div
                  class="msg container fixedScrollbar actions"
                  style="flex-direction: row; justify-content: flex-end; align-items: center;"
                />
              </div>
              <div
                class="msg container fixedScrollbar content"
                style="flex-direction: column;"
                tabindex="0"
              >
                <div
                  class="msg container fixedScrollbar scopeMultiItemColumn"
                  style="flex-direction: column;"
                >
                  <textarea
                    class="msg input generatedPrompt"
                    rows="5"
                  />
                  <input
                    class="msg toggle round"
                    id="returnPromptToggle"
                    readonly=""
                    type="checkbox"
                  />
                  <label
                    class="msg toggle round"
                    for="returnPromptToggle"
                    tabindex="0"
                  >
                    Capture generated prompt
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="msg container fixedScrollbar splitHost"
            id="languageSectionHost"
            style="flex-direction: column; justify-content: stretch; height: 16px; top: 503px;"
          >
            <div
              class="msg container fixedScrollbar section"
              id="languageSection"
              style="flex-direction: column; align-items: stretch;"
            >
              <div
                class="msg container fixedScrollbar title"
                style="flex-direction: row; align-items: center;"
                tabindex="0"
              >
                <div
                  class="msg icon codicon codicon-chevron-right"
                />
                <label
                  class="msg label"
                  data-tooltip="expand"
                >
                  Language Settings
                </label>
                <div
                  class="msg container fixedScrollbar actions"
                  style="flex-direction: row; justify-content: flex-end; align-items: center;"
                />
              </div>
              <div
                class="msg container fixedScrollbar content"
                style="flex-direction: column;"
                tabindex="0"
              >
                <div
                  class="msg container fixedScrollbar scopeMultiItemColumn"
                  style="flex-direction: column; justify-content: flex-start; align-items: stretch;"
                >
                  <div
                    class="msg container fixedScrollbar scopeLabeledItem"
                    style="flex-direction: row;"
                  >
                    <label
                      class="msg label scopeLabel"
                      data-tooltip="expand"
                    >
                      Translation:
                    </label>
                    <div
                      class="msg container fixedScrollbar dropdown scopeLanguage"
                      data-tooltip="inherit"
                      style="flex-direction: row; align-items: center;"
                      tabindex="0"
                    >
                      <label
                        class="msg label ellipsis"
                        data-tooltip="expand"
                      >
                        No translation
                      </label>
                    </div>
                  </div>
                  <div
                    class="msg container fixedScrollbar scopeLabeledItem"
                    style="flex-direction: row;"
                  >
                    <label
                      class="msg label scopeLabel"
                      data-tooltip="expand"
                    >
                      Translation Model:
                    </label>
                    <div
                      class="msg container fixedScrollbar dropdown scopeModel"
                      data-tooltip="inherit"
                      style="flex-direction: row; align-items: center;"
                      tabindex="0"
                    >
                      <label
                        class="msg label ellipsis"
                        data-tooltip="expand"
                      >
                        Mistral
                      </label>
                    </div>
                  </div>
                  <input
                    class="msg toggle round"
                    id="<filtered>"
                    readonly=""
                    type="checkbox"
                  />
                  <label
                    class="msg toggle round"
                    for="<filtered>"
                    tabindex="0"
                  >
                    Only translate answers
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="msg container fixedScrollbar scopeControls"
      style="flex-direction: row; justify-content: flex-end;"
    >
      <div
        caption="Save"
        class="msg button saveChatOptionsBtn"
        role="button"
        tabindex="0"
      >
        Save
      </div>
      <div
        caption="Load"
        class="msg button loadChatOptionsBtn"
        role="button"
        tabindex="0"
      >
        Load
      </div>
      <div
        caption="Start New Chat"
        class="msg button startNewChatBtn"
        role="button"
        tabindex="0"
      >
        Start New Chat
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatOptions > historyMessageColumnFormatter > should format message without truncation 1`] = `
<div
  class="itemField"
>
  <label
    class="msg label"
    data-tooltip="expand"
  >
    Hello, this is a test message
  </label>
  <div
    class="msg icon iconOnMouseOver codicon codicon-close"
  />
</div>
`;

exports[`ChatOptions > historyMessageColumnFormatter > should handle empty message 1`] = `
<div
  class="itemField"
>
  <label
    class="msg label"
    data-tooltip="expand"
  >
    
  </label>
  <div
    class="msg icon iconOnMouseOver codicon codicon-close"
  />
</div>
`;
